crates/normalize/tests/snapshots/cli_snapshots__help_trend_multi.snap
---
source: crates/normalize/tests/cli_snapshots.rs
expression: "snapshot_help(&[\"trend\", \"multi\"])"
---
Track multiple health metrics (complexity, length, test ratio, density) over git history.

Usage: normalize trend multi [OPTIONS]

Options:
  -n, --snapshots <snapshots>      Number of historical snapshots (default: 6)
      --pretty                     Human-friendly output with colors and formatting
      --compact                    Compact output without colors (overrides TTY detection)
  -r, --root <root>                Root directory (defaults to current directory)
      --jsonl                      Output one JSON object per line (for arrays)
      --json                       Output machine-readable JSON
      --jq <jq>                    Filter output through jq expression
      --input-schema               Print JSON Schema of the subcommand's input parameters and exit
      --output-schema              Print JSON Schema of the subcommand's return type and exit
      --manual                     Emit the reference manual for the command subtree rooted here and exit
      --params-json <params-json>  Provide all parameters as a JSON object instead of individual flags
  -h, --help                       Print help

Walks `snapshots` evenly-spaced commits on the current branch and collects a composite
set of metrics at each point. Returns a `TrendReport` with per-snapshot values for
all tracked metrics, enabling holistic codebase trend analysis.
