crates/normalize/tests/snapshots/cli_snapshots__help_trend_test_ratio.snap
---
source: crates/normalize/tests/cli_snapshots.rs
expression: "snapshot_help(&[\"trend\", \"test-ratio\"])"
---
Show how the test-to-code ratio has changed over git history.

Usage: normalize trend test-ratio [OPTIONS]

Options:
      --pretty                     Human-friendly output with colors and formatting
  -r, --root <root>                Root directory (defaults to current directory)
      --compact                    Compact output without colors (overrides TTY detection)
  -n, --snapshots <snapshots>      Number of snapshots to collect (default: 10)
      --jsonl                      Output one JSON object per line (for arrays)
      --json                       Output machine-readable JSON
      --jq <jq>                    Filter output through jq expression
      --input-schema               Print JSON Schema of the subcommand's input parameters and exit
      --output-schema              Print JSON Schema of the subcommand's return type and exit
      --manual                     Emit the reference manual for the command subtree rooted here and exit
      --params-json <params-json>  Provide all parameters as a JSON object instead of individual flags
  -h, --help                       Print help

Walks `snapshots` evenly-spaced commits and computes the fraction of files that
are test files at each point. Returns a `ScalarTrendReport`. Higher values indicate
better test coverage over time.
